--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-build
+# Build directory
+build/
+
+# Private files (i.e. for client-specific initialization scripts)
+private/
+
+# Visual Studio code settings
+.vscode/
+
+# Modelsim files
+work/
+transcript
+
+# Ctags
+tags
